--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+rustls = "0.23"
+rustls-native-certs = "0.7"
+rcgen = "0.13"
+
+serde = {version = "1.0", features = ["derive"]}
+toml = "0.8"
+serde_json = "1.0"
+
+log = "0.4"
+env_logger = "0.11"
